landing page 50% done

--- a/Home Page/index.html
+++ b/Home Page/index.html
@@ -9,14 +9,139 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&display=swap" rel="stylesheet">
+    <!-- poppins font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@900&display=swap" rel="stylesheet">
     <title>Index</title>
 </head>
 <body>
     <div id="container">
+        <!-- top black nav -->
         <div id="Top-Black">
             <h4 id="Top-Black-head">Register for The Coding Classroom and learn the basics of web development for free.</h4>
             <button id="Top-Black-button">REGISTER</button>
         </div>
+
+        <!-- navbar -->
+        <div id="navbar">
+            <img class="nav-logo" src="https://www.masaischool.com/img/navbar/logo.svg" alt="">
+            <a href=""><h4 id="nav-course" class="nav-head">COURSES</h4></a>
+            <a href=""><h4 id="nav-fee" class="nav-head">FEES & ISA</h4></a>
+            <a href=""><h4 id="nav-about" class="nav-head">ABOUT US</h4></a>
+            <a href=""><h4 id="nav-hire" class="nav-head">HIRE FROM US</h4></a>
+            <a href=""><h4 id="nav-faq" class="nav-head">FAQ</h4></a>
+            <a href=""><h4 id="nav-event" class="nav-head">EVENTS</h4></a>
+            <button id="nav-button-apply" class="nav-but1">APPLY NOW FOR FREE</button>
+            <button id="nav-button-login" class="nav-but2">LOGIN</button>
+        </div>
+
+        <!-- masai prepleaf -->
+        <div id="prepleaf">
+            <img src="./images/prepleaf-banner.png" alt="">
+        </div>
+
+        <!-- Register for now -->
+        <div id="register-for-now">
+            <h1 class="register-for-now-head">Driven by Outcomes,</h1>
+            <h1 class="register-for-now-head">Fuelled by Ambitions.</h1>
+            <h4 class="register-for-now-para1">Launch your dream career</h4>
+            <h4 class="register-for-now-para2">at 0 upfront fees.</h4>
+            <img class="register-for-now-img" src="./images/scribble.png" alt="">
+            <br>
+            <button id="apply-now-for-free">APPLY NOW FOR FREE</button>
+        </div>
+
+        <!-- People's Slide -->
+        <div id="people-slide">
+            <img src="./images/peoples1.png" alt="">
+        </div>
+
+        <!-- have a dream company in mind -->
+        <div id="haveadream">
+            <h3>Have a Dream Company In Mind?</h3>
+            <h1>Meet Some Of Our 700+ Hiring Partners</h1>
+        </div>
+
+        <!-- company's Slide -->
+        <div id="company-slide">
+            <div id="company-slide1">
+                <img src="https://masai-website-images.s3.ap-south-1.amazonaws.com/airmeet_93e45faced.svg" alt="">
+                <img src="https://masai-website-images.s3.ap-south-1.amazonaws.com/paytm_a5c1ce2bc6.svg" alt="">
+                <img src="https://masai-website-images.s3.ap-south-1.amazonaws.com/whitehat_5a86f1e308.svg" alt="">
+                <img src="https://masai-website-images.s3.ap-south-1.amazonaws.com/bharatpe_a3a5a3f552.svg" alt="">
+                <img src="https://masai-website-images.s3.ap-south-1.amazonaws.com/swiggy_bc1b88842e.svg" alt="">
+                <img src="https://masai-website-images.s3.ap-south-1.amazonaws.com/salesken_baefe048ac.svg" alt="">
+                <img src="https://masai-website-images.s3.ap-south-1.amazonaws.com/globallogic_c30eb641f7.svg" alt="">
+                <img src="https://masai-website-images.s3.ap-south-1.amazonaws.com/moneytap_d5a6c9d532.svg" alt="">
+                <img src="https://masai-website-images.s3.ap-south-1.amazonaws.com/eatfit_9dc276a187.svg" alt="">
+                <img src="https://masai-website-images.s3.ap-south-1.amazonaws.com/dream11_d6c8d97a52.svg" alt="">
+            </div>
+
+            <div id="company-slide2">
+                <img src="https://masai-website-images.s3.ap-south-1.amazonaws.com/bharatagri_d4794042fe.svg" alt="">
+                <img src="https://masai-website-images.s3.ap-south-1.amazonaws.com/sharechat_23a9923a34.svg" alt="">
+                <img src="https://masai-website-images.s3.ap-south-1.amazonaws.com/ola_15b5ee2b82.svg" alt="">
+                <img src="https://masai-website-images.s3.ap-south-1.amazonaws.com/ibm_795b5429ee.svg" alt="">
+                <img src="https://masai-website-images.s3.ap-south-1.amazonaws.com/byjus_e7b97a9c80.svg" alt="">
+                <img src="https://masai-website-images.s3.ap-south-1.amazonaws.com/vyapar_3f3770ebb5.svg" alt="">
+                <img src="https://masai-website-images.s3.ap-south-1.amazonaws.com/simplilearn_f8af8de923.svg" alt="">
+                <img src="https://masai-website-images.s3.ap-south-1.amazonaws.com/pagarbook_2746958f65.svg" alt="">
+                <img src="https://masai-website-images.s3.ap-south-1.amazonaws.com/smallcase_1740bcc33f.svg" alt="">
+            </div>
+        </div>
+
+        <!-- thousands trust masai -->
+        <div id="trustmasai">
+            <h1>Thousands Trust Masai To</h1>
+            <h1>Launch Their Career</h1>
+        </div>
+
+        <!-- people got placed -->
+        <div id="peoplegotplaced">
+
+            <div class="peoplegotplaced-card1">
+                <img class="peoplegotplaced-card1-img1" src="./images/img1.jpg" alt="">
+                <div class="peoplegotplaced-card1-div1">
+                    <h1>"</h1>
+                    <p>I got placed within 2 days after graduation! I'm happy I am part of the Masai family, not because they helped me but because of their mission to help other lost...</p>
+                    <h4>Aayushi Shah</h4>
+                    <img src="https://masai-website-images.s3.ap-south-1.amazonaws.com/sharechat_rect_73d95cd4e1.svg" alt="">
+                </div>
+            </div>
+
+            <div class="peoplegotplaced-card2">
+                <img class="peoplegotplaced-card1-img2" src="./images/img2.jpg" alt="">
+                <div class="peoplegotplaced-card1-div2">
+                    <h1>"</h1>
+                    <p>Masai brought discipline to my life, helped me develop a coder's mindset and increasing my concentration as well as time management skills. It took me...</p>
+                    <h4>Krithika Tripathi</h4>
+                    <img src="https://masai-website-images.s3.ap-south-1.amazonaws.com/instamojo_8763e704f7.png" alt="">
+                </div>
+            </div>
+
+            <div class="peoplegotplaced-card3">
+                <img class="peoplegotplaced-card1-img3" src="./images/img3.jpg" alt="">
+                <div class="peoplegotplaced-card1-div3">
+                    <h1>"</h1>
+                    <p>Projects are a part of journey at Masai. It gives the opportunity to work in a team, which gives a real experience of the corporate world. This helps students to...</p>
+                    <h4>Lokesh Nimje</h4>
+                    <img src="https://masai-website-images.s3.ap-south-1.amazonaws.com/MPL_7713ca3d5b.svg" alt="">
+                </div>
+            </div>
+
+            <div class="peoplegotplaced-card4">
+                <img class="peoplegotplaced-card1-img4" src="./images/img4.jpg" alt="">
+                <div class="peoplegotplaced-card1-div4">
+                    <h1>"</h1>
+                    <p>I left a job at Infosys to learn coding. Masai helped me get 3x more salary in a product-based compnay.</p>
+                    <h4>Lalitha Perumalla</h4>
+                    <img src="https://masai-website-images.s3.ap-south-1.amazonaws.com/Ajio_2ba59d62cb.svg" alt="">
+                </div>
+            </div>
+        </div>
+        <button id="peoplegotplaced-button">MORE STORIES</button>
+
     </div>
 </body>
 </html>
